2007-04-01 Nicolas Roffet <nicolas-kde@roffet.com>
	* Code refactoring to merge keyboard and mouse control.

2007-03-27 Nicolas Roffet <nicolas-kde@roffet.com>
	* Basic support of the keyboard reintroduced. (it has been removed on 2007-01-31.) Added a new (temporary) SVG item for the "cursor".
	* Used i18np for the GUI texts to better support plural forms.

2007-03-25 Nicolas Roffet <nicolas-kde@roffet.com>
	* GUI: Added a new widget that displays the number of balls to place and the score. Position: now on the left part of the main window.

2007-03-24 Nicolas Roffet <nicolas-kde@roffet.com>
	* GUI: Created a new widget to display in the status bar how many balls remain to be placed on the black box.

2007-03-23 Nicolas Roffet <nicolas-kde@roffet.com>
	* Preparation for Oxygenation: the element IDs in the SVG file have now better names.

2007-03-21 Nicolas Roffet <nicolas-kde@roffet.com>
	* Code refactoring to better manage themes.
	* The black box grid can now be custumized within the theme file (like the laser rays) with the XML node id="blackbox_grid".

2007-03-11 Nicolas Roffet <nicolas-kde@roffet.com>
	* Preparation for Oxygenation: the laser ray attributes (color, width and style) are now customizable. The rays are not SVG elements but their attributes are defined in the SVG file and parsed.
	* Correction of a (new) bug in the "solve" methode: Balls marked as "unsure" were not considered as placed balls.

2007-03-10 Nicolas Roffet <nicolas-kde@roffet.com>
	* Added posibility to play with a non square grid: 18x12. First: this is fun, because the grid is really big! It's also useful to see how the graphic items are displayed in such a configuration and it helped me to find and fix a bug in the black box class. :)

2007-03-09 Nicolas Roffet <nicolas-kde@roffet.com>