@@ -9,7 +9,7 @@
   <Menu name="settings"><text>&amp;Settings</text>
 	<Action name="options_size" append="save_merge"/>
 	<Action name="options_balls" append="save_merge"/>
-	<Action name="options_tutorial" append="save_merge"/>
+	<Action name="options_sandbox_mode" append="save_merge"/>
   </Menu>
 </MenuBar>
 
