@@ -1,3 +1,6 @@
+2007-05-08 Nicolas Roffet <nicolas-kde@roffet.com>
+	* Renamed the "tutorial" mode in "sandbox mode" in the code and in the settings menu as this denomination better fits.
+
 2007-04-01 Nicolas Roffet <nicolas-kde@roffet.com>
 	* Code refactoring to merge keyboard and mouse control.
 
